# columnate.py

./: README.md  setup.cfg
tests/examples/: lists.py
