# https://pypi.org/project/setupcfg-generator/
[metadata]
name = columnate
version = 2018.11.19
url = https://github.com/looking-for-a-job/columnate.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = columnate

[options]
install_requires = 
	public
	setuptools
packages = 
	columnate
